Убрана лишняя проверка в классе ObjectMapperInstance.getInstance. Из моделей убрана аннотация @Data и заменена на @Getter и @Setter. В XmlToJson.getNameFirms исправлен способ получения уникальных значений. Класс Extension удалён за ненадобностью. Изменены способы сравнения xml и json файлов в тестах. Изменена обработка исключений.